# go-examples

./: README.md
cmake/: CMakeLists-version1.txt  CMakeLists.txt  main.c
cmake/math/: CMakeLists.txt  math.c  math.h
haproxy/: Dockerfile  README.md  docker-compose.yaml  haproxy.cfg  server.go
rabbitmq/: direct_exchange.go  go.mod  log_receiver.go  main.go  receiver.go  rpc.go  topic_exchange.go
shell/: pull-image.sh  replace.sh  untag.sh
